--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ services:
       dockerfile: Dockerfile
     depends_on:
       - postgres
+    links:
+      - redis
     environment:
       - PGHOST=postgres
       - PGDATABASE=postgres
@@ -30,3 +32,7 @@ services:
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
+
+  redis:
+    image: "redis:alpine"
+    container_name: redis_db
